# drama_analysis

./: README.md  main.py  pyproject.toml  requirements.txt  task.md
data/: drama.xml
drama_graph/: __init__.py  dracor_reader.py  graph_builder.py  report.py  visualize.py
