[project]
name = "drama-graph"
version = "0.1.0"
description = "Mini project: character co-occurrence graph + speaker frequency table from DraCor-TEI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.3",
  "matplotlib>=3.8",
  "lxml>=6.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["drama_graph*"]
